@startuml

skinparam linetype ortho
skinparam classAttributeIconSize 0

top to bottom direction

class CSimulation

class CRender
class CLoopReader
class CRobot
class CWallFollower
class CLineFollower

class CRangeSensor
class CLineSensor


'--- Main simulation ownership ---
CSimulation *-- CRender
CSimulation *-- CLoopReader
CSimulation *-- CRobot
CSimulation *-- CWallFollower
CSimulation *-- CLineFollower


'--- Controller sensors ---
CWallFollower *-- CRangeSensor
CLineFollower *-- CLineSensor


'--- Robot knows the renderer ---
CRobot --> CRender


'--- Layout control ---
CRender -[hidden]- CLoopReader
CLoopReader -[hidden]- CRobot
CRobot -[hidden]- CWallFollower
CWallFollower -[hidden]- CLineFollower

CRangeSensor -[hidden]- CLineSensor

@enduml